# FindFile_MVP

./: .gitignore  CHANGELOG.txt  README.md  README_NATIVE_V2.txt  app.py  config.py  settings.py
.github/workflows/: build-desktop.yml  build-indexer.yml  build.yml  release.yml
data/: file_index.db
database/: db.py
desktop/FindFile.Desktop/: App.xaml  App.xaml.cs  FindFile.Desktop.csproj  MainWindow.xaml  MainWindow.xaml.cs
desktop/FindFile.Desktop/Core/: ObservableObject.cs  RelayCommand.cs
desktop/FindFile.Desktop/Models/: ExtensionOption.cs  ExtensionStat.cs  IndexerSettings.cs  IndexerStatus.cs  IndexerStatusDto.cs  SearchResult.cs  UpdateCheckResult.cs  UpdateConfig.cs  UpdateManifest.cs
desktop/FindFile.Desktop/Resources/: Styles.xaml
desktop/FindFile.Desktop/Services/: FileDialogService.cs  IndexerProcessService.cs  SettingsService.cs  UpdateService.cs
desktop/FindFile.Desktop/ViewModels/: AboutViewModel.cs  IndexerViewModel.cs  MainViewModel.cs  ResultsViewModel.cs  SearchViewModel.cs  SettingsViewModel.cs
desktop/FindFile.Desktop/Views/: AboutPage.xaml  AboutPage.xaml.cs  IndexerPage.xaml  IndexerPage.xaml.cs  IndexerViewModel.cs  ResultsPage.xaml  ResultsPage.xaml.cs  SearchPage.xaml  SearchPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
desktop/FindFile.Native/: CMakeLists.txt
desktop/FindFile.Native/src/: main.cpp
gui/: main_window.py
indexer/: CMakeLists.txt  scanner.py
indexer/src/: main.cpp
indexer/src/app/: AppConfig.h  CommandLineParser.cpp  CommandLineParser.h  IndexerApplication.cpp  IndexerApplication.h
indexer/src/engine/: ErrorCollector.h  ExtensionCounter.h  IndexStats.h  IndexerEngine.cpp  IndexerEngine.h
indexer/src/fs/: DirectoryScanner.cpp  DirectoryScanner.h  PathBuffer.h  ScannedEntry.h
indexer/src/index/: BinaryIndexWriter.cpp  BinaryIndexWriter.h  CheckpointManager.h  IndexBatch.h  PathTreeBuilder.cpp  PathTreeBuilder.h  StringTable.cpp  StringTable.h
indexer/src/ipc/: SharedMemoryControl.cpp  SharedMemoryControl.h  SharedMemoryStatus.cpp  SharedMemoryStatus.h
indexer/src/platform/: FileHandle.h  MappedMemory.h  WinHandle.h
indexer/src/util/: Logger.cpp  Logger.h  TimeUtils.h  UtfUtils.h
search/: service.py
